# survivor-cli

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  README_EN.md  survivor.cpp  version.h.in
docs/superpowers/plans/: 2026-04-25-survivor-full-features.md
docs/superpowers/specs/: 2026-04-25-survivor-design.md
